# decimallib

./: .gitignore  README.md  main.py  pyproject.toml
decimallib/: __init__.py  decimal.py  rounding.py  validators.py
examples/: finance.py  float_comparison.py
tests/: test_decimal.py
