[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decimallib"
version = "0.1.0"
description = "Arbitrary-precision decimal arithmetic, free of floating-point rounding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["decimallib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
